# http-tokio-router

./: Cargo.toml  README.md
crates/http-tokio-router-macro/: Cargo.toml
crates/http-tokio-router-macro/src/: lib.rs  route.rs
src/: error.rs  lib.rs  middleware.rs  pattern.rs  result.rs  router.rs
src/extractors/: body_owned.rs  ext.rs  from_request.rs  mod.rs  request_params.rs
src/resolver/: ctx.rs  mod.rs  node.rs  pattern_guard.rs  traits.rs
src/server/: events.rs  events_builder.rs  mod.rs  server.rs
