[workspace]
members = ["crates/http-tokio-router-macro"]

[package]
name = "http-tokio-router"
version = "0.1.0"
edition = "2021"

[dependencies]
http-tokio = { git = "https://github.com/rust-http-server/http-tokio" }
http-tokio-router-macro = { path = "./crates/http-tokio-router-macro" }
anymap = "0.12.1"
async_fn_traits = "0.1.1"
bytes = "1.10.1"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"

[lib]
path = "src/lib.rs"
